committing forgotten files and pn2 project

--- a/src/mcsafetyfeed-server/mcsafetyfeedserver/static/feed.html
+++ b/src/mcsafetyfeed-server/mcsafetyfeedserver/static/feed.html
@@ -254,7 +254,7 @@
             */
             
             // load feed items
-            url = 'dispatches.json';
+            url = '/dispatches.json';
             $.getJSON(url, function( data ) {
             
                 html = '';
